# auditable-ai-lakehouse

./: .env.example  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  replay_output.txt  run_output.txt
.github/workflows/: ci.yml  docs.yml
blockchain/: Move.toml  README.md
blockchain/sources/: merkle_registry.move
config/: aptos-devnet.yaml  aptos-testnet.yaml  default.yaml  local-demo.yaml  sepolia.yaml
docs/: architecture.md  compliance-mapping.md  index.md  mkdocs.yml  replay-tool.md
move/audit_anchor/: Move.toml  README.md
move/audit_anchor/sources/: audit_anchor.move
notebooks/: 01_generate_synthetic_swift.py  02_bronze_ingestion.py  03_silver_parse_validate.py  04_gold_features.py  05_train_isolation_forest.py  05b_promote_model.py  06_score_and_log_events.py  07_anchor_batch.py
scripts/: bootstrap.sh  verify_anchor.sh
src/audit_lakehouse/: __init__.py  config.py  events.py  hashing.py  runtime_env.py
src/audit_lakehouse/anchoring/: __init__.py  anchor.py  batch.py  explorer.py  ledger.py  merkle.py  verify.py
src/audit_lakehouse/compliance/: mapping.yaml  render.py
src/audit_lakehouse/evidence/: __init__.py  collect.py
src/audit_lakehouse/generator/: __init__.py  dataset.py  mt540.py
src/audit_lakehouse/lakehouse/: __init__.py  bronze.py  gold.py  silver.py
src/audit_lakehouse/modeling/: __init__.py  isolation_forest.py  promotion.py  scoring.py
src/audit_lakehouse/orchestration/: __init__.py  replay_menu.py  run.py  runner.py
src/audit_lakehouse/replay/: __init__.py  cli.py  inference.py  loader.py  report.py
src/swift_audit/: __init__.py  config.py  events.py  hashing.py
src/swift_audit/anchoring/: __init__.py  anchor.py  batch.py  ledger.py  merkle.py  verify.py
src/swift_audit/compliance/: __init__.py  render.py
src/swift_audit/generator/: __init__.py  anomalies.py  dataset.py  mt540.py  mt548.py
src/swift_audit/lakehouse/: __init__.py  bronze.py  gold.py  silver.py
src/swift_audit/modeling/: __init__.py  isolation_forest.py  promotion.py  scoring.py
src/swift_audit/orchestration/: __init__.py  replay_menu.py  run.py  runner.py
src/swift_audit/replay/: cli.py  inference.py  loader.py  report.py
tests/: test_anchor_batch.py  test_aptos_ledger.py  test_bronze.py  test_compliance_mapping.py  test_config.py  test_evidence_collect.py  test_generator.py  test_gold.py  test_hashing.py  test_merkle.py  test_modeling.py  test_orchestration.py  test_promotion.py  test_replay_report.py  test_replay_tool.py  test_scoring.py  test_silver.py  test_verify_anchor.py
