[project]
name = "swift-audit"
version = "0.1.0"
description = "An auditable AI architecture for post-trade financial operations"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Thesis Author" }]
keywords = [
    "ai-governance",
    "eu-ai-act",
    "post-trade",
    "swift",
    "delta-lake",
    "mlflow",
    "blockchain-audit",
    "lakehouse",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    # Data & ML
    "pandas>=2.2",
    "numpy>=1.26,<2.0",
    "scikit-learn>=1.5",
    "mlflow>=2.14",
    "deltalake>=0.19",       # OSS reader/writer, used locally + in CI
    # Anchoring
    "aptos-sdk>=0.11,<0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "black>=24.4",
    "mypy>=1.10",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocs-mermaid2-plugin>=1.1",
]

[project.scripts]
replay = "swift_audit.replay.cli:app"
verify-anchor = "swift_audit.anchoring.verify:cli"
render-compliance = "swift_audit.compliance.render:cli"
run = "swift_audit.orchestration.run:app"
replay-menu = "swift_audit.orchestration.replay_menu:app"
swift-audit-run = "swift_audit.orchestration.run:app"
swift-audit-replay-menu = "swift_audit.orchestration.replay_menu:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/swift_audit"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "W", "C90"]
ignore = ["E501"]  # handled by black

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]
# typer.Option / typer.Argument in defaults is the official Typer pattern.
"**/cli.py" = ["B008"]
"**/verify.py" = ["B008"]
"**/render.py" = ["B008"]
"**/orchestration/*.py" = ["B008"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "integration: tests that hit Aptos or Databricks (skipped by default)",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
disallow_untyped_defs = true
